--- a/app/src/main/res/layout/activity_start_chat.xml
+++ b/app/src/main/res/layout/activity_start_chat.xml
@@ -29,11 +29,17 @@
 
         <ImageView
             android:id="@+id/iv_chat_icon"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:src="@drawable/ic_chat"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_more_vert"
+            android:padding="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_alignParentEnd="true"
-            android:contentDescription="Chat Icon"/>
+            android:layout_centerVertical="true"
+            android:contentDescription="History Button"
+            app:tint="#FFFFFF"/>
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
